Fixed some cosmetic issues on the household requests page - now the description of requests don't overlap their titles

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -503,7 +503,7 @@ label
     min-width: 40%
     margin: 5px 0
     float: left
-    margin-left: 2em
+    margin-left: 3em
     color: #555
     z-index: -5
     .cost
